--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,18 +9,29 @@ services:
       - POSTGRES_PASSWORD=somepass
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 15
   redis:
     image: redis:alpine
   api:
     build:
       context: .
     ports:
-      - "4322:4321"
+      - "4322:4322"
     command: >
       sh -c "python3 -m app.migrations.cli apply &&
              python3 -m run api"
+    depends_on:
+      db:
+        condition: service_healthy
   worker:
     build:
       context: .
     command: >
       sh -c "python3 -m run worker"
+    depends_on:
+      db:
+        condition: service_healthy
